# dtact

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  SPONSOR.md  benchmark_results.md  build.rs  cbindgen-cxx.toml  cbindgen.toml  dtact.h  dtact.hpp  release.sh
.cargo/: config.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: benchmark.yml  cifuzz.yml  codeql.yml  cross_platform.yml  deploy.yml  rust.yml  scorecard.yml  security.yml
benches/: io_performance.rs  scheduler_efficiency.rs
dtact-io/: Cargo.toml  build.rs
dtact-io/src/: lib.rs  windows_primitives.rs
dtact-io/tests/: cancel_test.rs  driver_test.rs  future_test.rs
dtact-macros/: Cargo.toml
dtact-macros/src/: lib.rs
dtact-util/: Cargo.toml  README.md  build.rs  cbindgen-cxx.toml  cbindgen.toml  dtact_util.h  dtact_util.hpp
dtact-util/benches/: fs_performance.rs  io_performance.rs  named_pipe_performance.rs  process_performance.rs  signal_performance.rs  stream_performance.rs  sync_performance.rs  tcp_roundtrip.rs  timer_performance.rs  udp_performance.rs  unix_socket_roundtrip.rs
dtact-util/src/: lib.rs  lockfree.rs
dtact-util/src/ffi/: fs.rs  io.rs  mod.rs  process.rs  signal.rs  stream.rs  timer.rs
dtact-util/src/fs/: iocp_windows.rs  mod.rs  native.rs  tokio_backend.rs  uring_linux.rs
dtact-util/src/io/: combinators.rs  mod.rs  named_pipe_windows.rs  native.rs  tokio_backend.rs  trace.rs  windows.rs
dtact-util/src/process/: mod.rs  native.rs  tokio_backend.rs
dtact-util/src/signal/: mod.rs  registry.rs  tokio_backend.rs  unix.rs  windows.rs
dtact-util/src/stream/: mod.rs  native.rs  tokio_backend.rs
dtact-util/src/sync/: barrier.rs  broadcast.rs  mod.rs  mpsc.rs  mutex.rs  notify.rs  once_cell.rs  oneshot.rs  rwlock.rs  semaphore.rs  wait_queue.rs  watch.rs
dtact-util/src/timer/: mod.rs  native.rs  tokio_backend.rs
dtact-util/tests/: cancel_test.rs  combinators_test.rs  driver_test.rs  ffi_test.rs  fs_test.rs  future_test.rs  lookup_host_test.rs  named_pipe_test.rs  process_test.rs  signal_test.rs  stream_test.rs  sync_test.rs  timer_test.rs  udp_test.rs  unix_socket_test.rs
examples/: Makefile  c_async.c  c_dtact_util  c_dtact_util.c  rust_async.rs  rust_dtact_util.rs
fuzz/: Cargo.toml
fuzz/.cargo/: config.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
paper/: main.bib  main.tex
paper/script/: plot_numa_info_cost.py  plot_pd_decomposition.py  plot_variance_analysis.py  plot_wait_bound.py  simulate_competitive.py  simulate_dag_scheduling.py  simulate_load_balance.py  simulate_makespan.py  simulate_stability.py  verify_fsm.py
src/: api.rs  c_ffi.rs  common_types.rs  context_switch.rs  dta_scheduler.rs  future_bridge.rs  lib.rs  memory_management.rs  utils.rs
tests/: c_ffi_integration.rs  concurrency.rs  e2e.rs  fiber_lifecycle.rs  future_bridge_edge.rs  load_balance.rs  loom_test.rs  panic_safety.rs  resource_exhaustion.rs  scheduler.rs
tests/common/: mod.rs
web/: Cargo.toml  Trunk.toml  index.html  style.css
web/.cargo/: config.toml
web/public/: 404.html
web/src/: app.rs  main.rs  theme.rs
web/src/components/: footer.rs  nav.rs
web/src/pages/: architecture.rs  bench.rs  home.rs  mod.rs  sponsor.rs
