[package]
name = "dtact-io"
version = "0.1.0"
edition = "2024"

authors = ["Xinyu Yang <xinyu.yang@apich.org>"]
exclude = ['bench_results.md']
publish = true
repository = "https://github.com/Apich-Organization/dtact"
documentation = "https://docs.rs/dtact-io"
readme = "../README.md"
categories = ["asynchronous", "concurrency"]
keywords = ["async", "futures", "non-blocking", "runtime", "concurrency"]
license = "MIT or Apache-2.0"
description = "I/O utilities for Dtact: A non-preemptive, stackful coroutine runtime featuring a lock-free context arena, P2P mesh scheduling, and architecture-specific assembly switchers. Designed for hardware-level control and non-blocking heterogeneous orchestration."
rust-version = "1.90.0"

[features]
default = ["tokio", "dtact"]
tokio = ["compat"]
experimental = [
    "dep:mio",
    "dtact",
    "dep:dtact-macros",
    "dep:libc",
    "dep:io-uring",
]
compat = ["dep:tokio", "dep:futures-io"]

[dependencies]
mio = { version = "1.2", features = [
    "os-poll",
    "net",
], default-features = false, optional = true }
dtact = { version = "0.2", path = "../", optional = true }
dtact-macros = { version = "0.1", path = "../dtact-macros", optional = true }
libc = { version = "0.2", optional = true }
futures-io = { version = "0.3", optional = true }
tokio = { version = "1.52", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "io-util",
], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.7", features = ["direct-syscall"], optional = true }
