[package]
name = "dtact-io"
version = "0.1.1"
edition = "2024"

authors = ["Xinyu Yang <xinyu.yang@apich.org>"]
exclude = ['bench_results.md']
publish = true
repository = "https://github.com/Apich-Organization/dtact"
documentation = "https://docs.rs/dtact-io"
readme = "../README.md"
categories = ["asynchronous", "concurrency"]
keywords = ["async", "futures", "non-blocking", "runtime", "concurrency"]
license = "MIT or Apache-2.0"
description = "I/O utilities for Dtact: A non-preemptive, stackful coroutine runtime featuring a lock-free context arena, P2P mesh scheduling, and architecture-specific assembly switchers. Designed for hardware-level control and non-blocking heterogeneous orchestration."
rust-version = "1.90.0"

[features]
# Default backend: thin wrapper over `tokio::net`. Safe, well-tested,
# cross-platform (uses tokio's own epoll/kqueue/IOCP reactor under the hood).
default = ["tokio", "dtact"]
tokio = ["compat"]

# Alternate backend: a from-scratch lock-free driver with a native OS backend
# per platform — io_uring on Linux, IOCP on Windows, kqueue (via mio) on
# macOS/BSD. Higher ceiling, far less battle-tested; not the default while it
# matures. Selects its actual OS backend purely via `cfg(target_os/windows)`,
# not a sub-feature — there's nothing else to pick once `experimental` is on.
experimental = [
    "dep:mio",
    "dtact",
    "dep:dtact-macros",
    "dep:libc",
    "dep:io-uring",
    "dep:windows-sys",
]
compat = ["dep:tokio", "dep:futures-io", "dep:libc"]

[dependencies]
mio = { version = "1.2", features = [
    "os-poll",
    "net",
], default-features = false, optional = true }
dtact = { version = "0.2", path = "../", optional = true, features = [
    "cooperative-yield",
] }
dtact-macros = { version = "0.1", path = "../dtact-macros", optional = true }
libc = { version = "0.2", optional = true }
futures-io = { version = "0.3", optional = true }
tokio = { version = "1.52", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "io-util",
], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.7", features = ["direct-syscall"], optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_System_IO",
    "Win32_System_Threading",
], optional = true }

[dev-dependencies]
libc = "0.2"
