[package]
name = "dtact-util"
version = "0.1.3"
edition = "2024"

authors = ["Xinyu Yang <xinyu.yang@apich.org>"]
exclude = ['bench_results.md']
publish = true
repository = "https://github.com/Apich-Organization/dtact"
documentation = "https://docs.rs/dtact-util"
readme = "../README.md"
categories = ["asynchronous", "concurrency"]
keywords = ["async", "futures", "non-blocking", "runtime", "concurrency"]
license = "MIT or Apache-2.0"
description = "Async utilities for Dtact: I/O, filesystem, process, signal, stream and timer primitives with lock-free native (io_uring/IOCP/kqueue) and tokio backends. Designed for hardware-level control and non-blocking heterogeneous orchestration."
rust-version = "1.90.0"

[features]
# Default backend: a from-scratch lock-free driver with a native OS backend
# per platform — io_uring on Linux, IOCP on Windows, kqueue (via mio) on
# macOS/BSD. Selects its actual OS backend purely via `cfg(target_os/windows)`,
# not a sub-feature — there's nothing else to pick once `native` is on.
default = ["native", "dtact"]

# Alternate backend: thin wrapper over `tokio::net`, for callers who'd rather
# lean on tokio's own epoll/kqueue/IOCP reactor (e.g. to share a runtime with
# other tokio-based code) than the native driver above.
tokio = ["compat"]

native = [
    "dep:mio",
    "dtact",
    "dep:dtact-macros",
    "dep:libc",
    "dep:io-uring",
    "dep:windows-sys",
]
compat = ["dep:tokio", "dep:futures-io", "dep:libc"]

[dependencies]
mio = { version = "1.2", features = [
    "os-poll",
    "net",
], default-features = false, optional = true }
dtact = { version = "0.2", path = "../", optional = true }
dtact-macros = { version = "0.1", path = "../dtact-macros", optional = true }
libc = { version = "0.2", optional = true }
futures-io = { version = "0.3", optional = true }
tokio = { version = "1.52", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "io-util",
    "fs",
    "time",
    "signal",
    "process",
], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.7", features = ["direct-syscall"], optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
], optional = true }

[dev-dependencies]
libc = "0.2"
criterion = "0.8"
tokio = { version = "1.52", features = ["full"] }

[[bench]]
name = "fs_performance"
harness = false
required-features = ["native"]

[[bench]]
name = "timer_performance"
harness = false

[[bench]]
name = "stream_performance"
harness = false

[[bench]]
name = "signal_performance"
harness = false

[[bench]]
name = "process_performance"
harness = false

[[bench]]
name = "io_performance"
harness = false
