[package]
name = "dtact-web"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
    "Location",
    "History",
    "Storage",
    "Clipboard",
    "Navigator",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
gloo-storage = "0.4"
gloo-timers = { version = "0.4", features = ["futures"] }
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
